--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,4 +17,11 @@ pipeline{
             }
         }
     }
+    post{
+        always{
+            sh 'echo "affichage du rapport"'
+            junit "target/surefire-reports/**/*.xml"
+        }
+        
+    }
 }
